# cpp_result

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
examples/: CMakeLists.txt  example.cpp
include/: result.hpp
include/respp/: result.hpp
test/: CMakeLists.txt  result_test.cpp
